--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -1,7 +1,14 @@
+;[DB_MAIL]
+;user = postgres
+;password = 12345678
+;ip_db = 127.0.0.1
+;port_db = 5432
+;name_db = mail
+
 [DB_MAIL]
 user = postgres
 password = 12345678
-ip_db = 127.0.0.1
+ip_db = 20.0.0.85
 port_db = 5432
 name_db = mail
 
