refactoring code, API для получение хедеров одного почтово сообщение, api websocket idle для получения новых сообщений, API для контактов, начало связки с редис

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -1,16 +1,16 @@
-;[DB_MAIL]
-;user = postgres
-;password = 12345678
-;ip_db = 127.0.0.1
-;port_db = 5432
-;name_db = mail
+#
+[DB_REDIS]
+password = 12345678
+ip_db = 20.0.0.130
+port_db = 5432
+name_db = mail
 
 [DB_MAIL]
 user = postgres
 password = 12345678
-ip_db = 20.0.0.85
+ip_db = 20.0.0.130
 port_db = 5432
-name_db = mail
+name_db = palas_248
 
 [HOST_MAIL]
 imap_host = mail.palas
