--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -1,18 +1,19 @@
 #
 [DB_REDIS]
 password = 12345678
-ip_db = 20.0.0.130
+ip_db = 20.0.0.123
 port_db = 5432
 name_db = mail
 
 [DB_MAIL]
 user = postgres
 password = 12345678
-ip_db = 20.0.0.130
+ip_db = 20.0.0.123
 port_db = 5432
 name_db = palas_248
 
 [HOST_MAIL]
+domain_default = mail.palas
 imap_host = mail.palas
 smtp_host = mail.palas
 smtp_port = 25
