big update, переработаны вебсокеты, асинхронная либа, теперь все данные подключения к БД в конфиге

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -1,16 +1,16 @@
 #
 [DB_REDIS]
-password = 12345678
-ip_db = 20.0.0.123
-port_db = 5432
-name_db = mail
+redis_password = 12345678
+redis_ip = 20.0.0.123
+redis_port = 6379
+redis_max_connection = 500
 
 [DB_MAIL]
-user = postgres
-password = 12345678
-ip_db = 20.0.0.123
-port_db = 5432
-name_db = palas_248
+db_user = postgres
+db_password = 12345678
+db_ip = 20.0.0.123
+db_port = 5432
+db_name = palas_248
 
 [HOST_MAIL]
 domain_default = mail.palas
